<resources>
    <string name="action_settings">Settings</string>
    <string name="action_edit">Edit</string>
    <string name="ok">Ok</string>
    <string name="ok_upper">OK</string>
    <string name="title_warning">Warning</string>
    <string name="message_delete_confirmation">Are sure you want to delete this attachment?</string>
    <string name="message_empty_tags">YOU HAVE NO TAGS</string>
    <string name="title_delete">Delete</string>
    <string name="add_document">Add Document</string>
    <string name="no_documents">No documents</string>
    <string name="cancel">Cancel</string>
    <string name="case_number">Case Number</string>
    <string name="font_bold">fonts/Roboto-Bold.ttf</string>
    <string name="font_light">fonts/Roboto-Light.ttf</string>
    <string name="font_medium">fonts/Roboto-Medium.ttf</string>
    <string name="font_regular">fonts/Roboto-Regular.ttf</string>
    <string name="hint_your_phone_number_or_email">Your phone number or email</string>
    <string name="title_continue">CONTINUE</string>
    <string name="login_note">If your phone is lost or stolen,\nyou may access your documents\nvia your email or phone number</string>
    <string name="passcode">Passcode</string>
    <string name="we_have_sent_passcode_to">Your passcode has been sent to you at\n%s</string>
    <string name="resend_passcode">RESEND PASSCODE</string>
    <string name="wrong_passcode">Passcode is not valid</string>
    <string name="wrong_passcode_msg">You entered the wrong passcode three times in a row.\nPlease generate new one.</string>
    <string name="add">Add</string>
    <string name="documents">Documents</string>
    <string name="forms">Forms</string>
    <string name="notifications">Notifications</string>
    <string name="my_trips">Tax Tracking</string>
    <string name="be_safe">Be Safe</string>
    <string name="settings">Settings</string>
    <string name="community">Community</string>
    <string name="police">Police</string>
    <string name="hospital">Hospital</string>
    <string name="consulate">Consulate</string>
    <string name="address">address</string>
    <string name="phone">phone</string>
    <string name="add_to_existing">Add to existing</string>
    <string name="create_document">Create document</string>
    <string name="edit_photo">Edit photo</string>
    <string name="add_photo">Add photo</string>
    <string name="login_information">Login information</string>
    <string name="add_phone">Add Phone</string>
    <string name="add_email">Add Email</string>
    <string name="you_can_log_in_to_zoomlee_using_both_phone_number_or_email">You can log in to Zoomlee using both phone\nnumber or email</string>
    <string name="home_country">Home country</string>
    <string name="subscription">Subscription</string>
    <string name="security">Security</string>
    <string name="manage_subscription">Manage Subscription</string>
    <string name="change_pin_code">Change PIN code</string>
    <string name="family_and_tags">Family And Tags</string>
    <string name="tags">Tags</string>
    <string name="invite">Invite</string>
    <string name="invite_friends_to_zoomlee">Invite friends to Zoomlee</string>
    <string name="if_you_like_zoomlee_invite_your_friends_so_they_also_can_store_all_their_documents_in_one_place">If you like Zoomlee, invite your friends, so they also can store all their documents in one place</string>
    <string name="manage_family_members">Manage family members</string>
    <string name="feedback">Feedback</string>
    <string name="write_play_market_review">Write Play Market review</string>
    <string name="email_feedback">Email feedback</string>
    <string name="take_photo">Take photo</string>
    <string name="choose_from_gallery">Choose from gallery</string>
    <string name="tap_to_select_country">Tap to select country</string>
    <string name="general">General</string>
    <string name="data_fields">Data Fields</string>
    <string name="attachemnts">Attachments</string>
    <string name="new_document">New Document</string>
    <string name="notes">Notes</string>
    <string name="family_member">Family Member</string>
    <string name="category_and_type">Category and Type</string>
    <string name="document_name">Document name</string>
    <string name="delete_document_uc">DELETE DOCUMENT</string>
    <string name="add_data_field_uc">ADD DATA FIELD</string>
    <string name="this_document_has_no_attachments">This document has\nno attachments</string>
    <string name="action_save">Save</string>
    <string name="write_your_notes_here">Write your notes here</string>
    <string name="other_document">Other document</string>
    <string name="are_you_sure_you_want_to_delete_this_document">Are you sure you want to delete this document?</string>
    <string name="nothing_found">Nothing found</string>
    <string name="add_text_field">Add Text Field</string>
    <string name="add_date_field">Add Date Field</string>
    <string name="add_tag">Add tag</string>
    <plurals name="days">
        <item quantity="one">day</item>
        <item quantity="other">days</item>
    </plurals>
    <plurals name="months">
        <item quantity="one">%d month</item>
        <item quantity="other">%d months</item>
    </plurals>
    <string name="remind_me">Remind Me</string>
    <string name="update_phone_note">If your phone is lost or stolen,\nyou may access your documents\nvia your phone number</string>
    <string name="update_email_note">If your phone is lost or stolen,\nyou may access your documents\nvia your email</string>
    <string name="update_btn_text">UPDATE</string>
    <string name="add_btn_text">ADD</string>
    <string name="your_phone_number">Your phone number</string>
    <string name="your_email">Your email</string>
    <string name="phone_title">Phone Number</string>
    <string name="email_title">Email</string>
    <string name="confirmation_title">Confirmation</string>
    <string name="device_is_rooted">Device is rooted</string>
    <string name="root_alert_msg">Your device is rooted. By accepting this agreement you accept that Zoomlee is not responsible for the safety of your documents from this moment.</string>
    <string name="accept">Accept</string>
    <string name="accept_and_dont_show_again">Accept and\ndon\'t show again</string>
    <string name="noconnection_title">Connection Error</string>
    <string name="noconnection_message">Sorry, cannot connect to the server. Please try again later</string>
    <string name="name">Name</string>
    <string name="delete_family_member">DELETE FAMILY MEMBER</string>
    <string name="delete_note">All family member\'s\ndocuments will be deleted</string>
    <string name="type_name_here">Type name here</string>
    <string name="renew_subscription_badge_text">Zoomlee pro subscription has ended. Renew to use tax tracking</string>
    <string name="no_app_to_share">You need to have Gmail app to use sharing</string>
    <string name="to_store_your_documents_securely_please_create_zoomlee_pin_code">
        Create a custom Zoomlee PIN Code\nto store your documents securely
    </string>
    <string name="confirm_pincode">Confirm PIN Code</string>
    <string name="create_pincode">Create PIN Code</string>
    <string name="please_enter_pin_code_again">Please enter PIN code\nagain</string>
    <string name="enter_your_pin_code">Enter your PIN code</string>
    <string name="i_forgot_my_pin">I FORGOT MY PIN</string>
    <string name="pin_reset">Pin reset</string>
    <string name="log_out_and_log_in_back_to_reset_your_pin">Note, all not synced data will be lost!</string>
    <string name="cancel_uc">CANCEL</string>
    <string name="logout_uc">LOGOUT</string>
    <string name="title_activity_passcode">Passcode</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_pin">PinActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_create_pin">@string/create_pincode</string>
    <string name="title_activity_nav_draw">NavDrawActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="title_activity_countries">@string/home_country</string>
    <string name="title_activity_documents">Documents</string>
    <string name="title_activity_document_details">Document details</string>
    <string name="title_activity_change_pin_code">ChangePinCodeActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_select_person">Family</string>
    <string name="title_activity_manage_persons">Family Members</string>
    <string name="title_activity_category_type_list">Document Type</string>
    <string name="search">Search</string>
    <string name="add_family_member">ADD FAMILY MEMBER</string>
    <string name="delete_uc">DELETE</string>
    <string name="delete_person_alert">Do you really want to delete this member? This will delete all his documents.</string>
    <string name="delete_person_title">Delete member</string>
    <string name="description_zoomlee_logo">Zoomlee logo</string>
    <string name="description_document_icon">Document icon</string>
    <string name="title_create_new_document">CREATE NEW DOCUMENT</string>
    <string name="title_add_to_existing_doc">ADD TO EXISTING DOCUMENT</string>
    <string name="title_cancel">CANCEL</string>
    <string name="description_loading">Loading indicator</string>
    <string name="description_of_Articles">Description of Articles</string>
    <string name="form_family_name">Family name</string>
    <string name="form_first_name">First (given) name</string>
    <string name="form_middle_name">Middle name</string>
    <string name="form_birth_date">Birth date</string>
    <string name="form_family_members">Number of family members traveling with you</string>
    <string name="form_us_street_address">U.S. street address (hotel name/destination)</string>
    <string name="form_city">City</string>
    <string name="form_state">State</string>
    <string name="form_passport_issued_by">Passport issued by (country)</string>
    <string name="form_passport_number">Passport number</string>
    <string name="form_country_of_residence">Country of residence</string>
    <string name="form_countries_visited">Countries visited on this trip prior to U.S. arrival</string>
    <string name="form_flight_no">Airline/Flight No. or Vessel Name</string>
    <string name="form_primary_purpose">The primary purpose of this trip is business:</string>
    <string name="form_i_am_bringing">I am (We are) bringing</string>
    <string name="form_fruits">fruits, vegetables, plants, seeds, food, insects</string>
    <string name="form_meets">meats, animals, animal/wildlife products</string>
    <string name="form_snails">disease agents, cell cultures, snails</string>
    <string name="form_soil">soil or have been on a farm/ranch/pasture</string>
    <string name="form_livestock_body">(such as touching or handling)</string>
    <string name="form_livestock_title">I have (We have) been in close proximity of livestock</string>
    <string name="form_currency">I am (We are) carrying currency or monetary instruments over $10,000 U.S. or foreign equivalent</string>
    <string name="form_merchandise">I have (We have) commercial merchandise</string>
    <string name="form_residents">Residents</string>
    <string name="form_residents_full">the total value of all goods, including commercial merchandise I/we have purchased or acquired abroad, (including gifts for someone else but not items mailed to the U.S.) and am/are bringing to the U.S. is ($)</string>
    <string name="form_visitors">Visitors</string>
    <string name="form_visitors_full">the total value of all articles that will remain in the U.S., including commercial nerchandise is ($)</string>
</resources>