<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_grey"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.zoomlee.zoo.ui.activity.LoginActivity">

    <ImageView
        android:id="@+id/logo"
        android:contentDescription="@string/description_zoomlee_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        android:src="@drawable/logo_zoomlee" />

    <com.zoomlee.zoo.ui.view.ZMEditText
        android:id="@+id/emailPhoneEt"
        style="@style/EditText"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        android:hint="@string/hint_your_phone_number_or_email"
        android:inputType="textEmailAddress" />

    <com.zoomlee.zoo.ui.view.ZMButton
        android:id="@+id/actionLogin"
        style="@style/Button.Green"
        app:font="@string/font_medium"
        android:layout_width="230dp"
        android:layout_height="@dimen/button_height"
        android:layout_below="@id/emailPhoneEt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/title_continue" />

    <com.zoomlee.zoo.ui.view.LoadingView
        android:id="@+id/loading"
        android:contentDescription="@string/description_loading"
        android:layout_width="@dimen/loading_spinner_width"
        android:layout_height="@dimen/loading_spinner_height"
        android:layout_below="@id/emailPhoneEt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:visibility="gone" />

    <com.zoomlee.zoo.ui.view.ZMTextView
        app:font="@string/font_light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/actionLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:gravity="center"
        android:lineSpacingExtra="1dp"
        android:text="@string/login_note"
        android:textColor="@color/white"
        android:textSize="@dimen/text_normal" />
</RelativeLayout>
